--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -65,6 +65,8 @@ DefaultViewportMouseLockMode=LockOnCapture
 -ActionMappings=(ActionName="ZoomIn",Key=MouseScrollUp,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 -ActionMappings=(ActionName="ZoomOut",Key=MouseScrollDown,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 -ActionMappings=(ActionName="ZoomIn",Key=None,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
+-ActionMappings=(ActionName="ZoomOut",Key=None,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
+-ActionMappings=(ActionName="PauseMenu",Key=Escape,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="SetDestination",Key=RightMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="ResetVR",Key=R,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="CastSpell",Key=LeftMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
@@ -72,6 +74,7 @@ DefaultViewportMouseLockMode=LockOnCapture
 +ActionMappings=(ActionName="ZoomOut",Key=MouseScrollDown,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="ZoomIn",Key=None,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="ZoomOut",Key=None,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="PauseMenu",Key=Q,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 -AxisMappings=(AxisName="MoveForward",Key=W,Scale=1.000000)
 -AxisMappings=(AxisName="MoveForward",Key=S,Scale=-1.000000)
 -AxisMappings=(AxisName="MoveRight",Key=D,Scale=1.000000)
