--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/TopDownCPP/Maps/TopDownExampleMap
-EditorStartupMap=/Game/TopDownCPP/Maps/TopDownExampleMap
+GameDefaultMap=/Game/Levels/TopDownExampleMap.TopDownExampleMap
+EditorStartupMap=/Game/Levels/TopDownExampleMap.TopDownExampleMap
 GlobalDefaultGameMode="/Script/TryBetterAgain.TryBetterAgainGameMode"
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
