new not working commit

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,11 +1,10 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Levels/TopDownExampleMap.TopDownExampleMap
 EditorStartupMap=/Game/Levels/TopDownExampleMap.TopDownExampleMap
-GlobalDefaultGameMode="/Script/TryBetterAgain.TryBetterAgainGameMode"
+GlobalDefaultGameMode=/Script/TryBetterAgain.TryBetterAgainGameMode
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_8
-
 
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_TopDown",NewGameName="/Script/TryBetterAgain")
@@ -23,6 +22,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/Engine.RecastNavMesh]
 AgentRadius=20.000000
 CellSize=19.000000
+RuntimeGeneration=Static
 
 [/Script/Engine.NavigationSystem]
 DirtyAreasUpdateFreq=60.000000
