Adding simple interface

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Levels/TopDownExampleMap.TopDownExampleMap
-EditorStartupMap=/Game/Levels/TopDownExampleMap.TopDownExampleMap
+EditorStartupMap=/Game/Levels/L1.L1
 GlobalDefaultGameMode=/Script/TryBetterAgain.TryBetterAgainGameMode
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
@@ -74,5 +74,4 @@ AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
-
 
